--- a/Site grid/index.html
+++ b/Site grid/index.html
@@ -93,6 +93,33 @@
 
    </div>
 
+   <section id="info">
+        <div id="botão-verde">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/></svg>
+            <p><b>All departments</b></p>
+        </div>
+
+        <div id="barra-de-pesquisa">
+            <p><b>All categories</b></p>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path d="M137.4 374.6c12.5 12.5 32.8 12.5 45.3 0l128-128c9.2-9.2 11.9-22.9 6.9-34.9s-16.6-19.8-29.6-19.8L32 192c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9l128 128z"/></svg>
+
+            <div id="barra4">
+                <div></div>
+            </div>
+
+            <p id="What-need">What you need?</p>
+        </div>
+
+        <div id="btnProcurar">
+
+
+        </div>
+
+   </section>
+
+
+
+   </div>
 
 
 </body>
