--- a/Site grid/index.html
+++ b/Site grid/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Abaixo ao display</title>
+    <title>To sabendo display</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -71,6 +71,7 @@
         </div>
     </header>
 
+    <!-- outro -->
 
    <div id="section">
         <div id="logo"><img src="logo.png.webp" alt=""></div> 
@@ -93,6 +94,8 @@
 
    </div>
 
+<!-- outro -->
+
    <section id="info">
         <div id="botão-verde">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="#ffffff" d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/></svg>
@@ -107,7 +110,7 @@
                 <div></div>
             </div>
 
-            <p id="What-need">What you need?</p>
+            <p id="What-need">What do you need?</p>
         </div>
 
         <div id="btnProcurar">
@@ -116,16 +119,56 @@
 
         <div id="contato">
             <div id="rodinha">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="#7fad39" d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z"/></svg>
-            </div>
+                <div id="telefone-verde"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="#7fad39" d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z"/></svg></div>
+            </div> 
         </div>
 
+        <div id="numeroEsuporte">
+            <p id="numero">+65 11.188.888</p>
+            <p id="suporte">support 24/7 time</p>
+        </div>
+    </section>
 
-   </section>
+    <!-- outro -->
 
+    <section id="fruit-fresh">
+        <div id="banner-vegetable">
+            <div id="escrita-banner">
+            <span>  FRUIT FRESH </span>
 
+            <h1 id="V100">  Vegetable <br> 100% Organic  </h1>
 
-   </div>
+            <p id="Pickup"> Free Pickup and Delivery Available </p>
+
+            <button id="shop">SHOP NOW</button>
+          </div>
+    </div>
+
+    </section>
+
+    <!-- Categorias -->
+
+    <section id="categorias">
+        <div id="laranja">
+            <img src="laranja.webp" alt="">
+            <p>FRESH FRUIT</p>
+        </div>
+
+        <div>
+            <img src="suco.webp" alt="">
+            <p>DRINK FRUITS</p>
+        </div>
+
+        <div>
+            <img src="embalagem.webp" alt="">
+            <p>DRIED FRUITS</p>
+        </div>
+
+        <div>
+            <img src="varias.webp" alt="">
+            <p>VEGETABLES</p>
+        </div>
+    </section>
 
 
 </body>
