metade da principal completa

--- a/Site grid/index.html
+++ b/Site grid/index.html
@@ -109,13 +109,11 @@
             <div id="barra4">
                 <div></div>
             </div>
-
-            <p id="What-need">What do you need?</p>
         </div>
 
-        <div id="btnProcurar">
-            <p id="search">SEARCH</p>
-        </div>
+        <input type="text" id="What" name="What" placeholder="What do you need?">
+        
+        <button id="btnProcurar">SEARCH</button>
 
         <div id="contato">
             <div id="rodinha">
@@ -149,25 +147,24 @@
     <!-- Categorias -->
 
     <section id="categorias">
-        <div id="laranja">
-            <img src="laranja.webp" alt="">
-            <p>FRESH FRUIT</p>
+            <div id="laranja"><img src="laranja.png" alt=""> </div>
+            <div id="suco"><img src="suco.png" alt=""></div>
+            <div id="carne"><img  src="carne.png" alt=""></div>
+            <div id="vegetal"><img src="vegetais.png" alt=""></div>
+    </section>
+
+    <section id="product">
+        <p id="featured">Featured Product</p>
+        <div id="linha-verde"></div>
+
+        <div id="options">
+            <p>All</p>
+            <p>Orages</p>
+            <p>Fresh Meat</p>
+            <p>Vegetables</p>
+            <p>Fastfood</p>
         </div>
 
-        <div>
-            <img src="suco.webp" alt="">
-            <p>DRINK FRUITS</p>
-        </div>
-
-        <div>
-            <img src="embalagem.webp" alt="">
-            <p>DRIED FRUITS</p>
-        </div>
-
-        <div>
-            <img src="varias.webp" alt="">
-            <p>VEGETABLES</p>
-        </div>
     </section>
 
 
